src/test/fun-test/semantic/MultipleMethodDecl.java.err
Semantic error: multiple declaration of method foo, line 3, pos 13
