src/test/fun-test/semantic/MultipleMethodDecl.java
class Main {
    int foo() { return 0; }
    void foo() {}

    void main() {}
}